--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port=4747 -o",
+    "start": "run-p start-db start-app",
+    "start-app": "ng serve --port 4747 -o",
+    "start-db": "json-server --watch data/artist-info.json --port 4748",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.3.1",
+    "json-server": "^0.15.1",
+    "npm-run-all": "^4.1.5",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
