--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@angular/youtube-player": "^9.1.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "json-server": "^0.15.1",
